notebook scrollbar width fix

--- a/Notes/index.css
+++ b/Notes/index.css
@@ -382,7 +382,7 @@ textarea:focus ~ .placeholder,
 }
 
 .container::-webkit-scrollbar {
-  width: 4px;
+  width: 8px;
 }
 
 .container::-webkit-scrollbar-track {
